--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3142,3 +3142,25 @@ input, select, textarea {
 				}
 
 	}
+
+/* Floating Button */
+*{padding:0;margin:0;}
+
+.float{
+	font-size: 100%;
+	position:fixed;
+	z-index: 1;
+	width:50px;
+	height:50px;
+	bottom:40px;
+	right:40px;
+	background-color:rgb(126, 202, 167);
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+	box-shadow: 2px 2px 3px #999;
+}
+
+.fa-shopping-cart{
+	margin-top:18px;
+}
