--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3152,8 +3152,8 @@ input, select, textarea {
 		z-index: 1;
 		width:50px;
 		height:50px;
-		bottom:40px;
-		right:40px;
+		bottom:20%;
+		right:40%;
 		background-color:rgb(126, 202, 167);
 		color:#FFF;
 		border-radius:50px;
